Kubernetes/Dev/Manifests/urlBackendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-ingress
  namespace: urlshortenerapp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api.my-nginx-page.com
      secretName: urlbackendingresssecret
  rules:
  - host: api.my-nginx-page.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: urlbackendservice
            port:
              number: 80
